[package]
name = "elevator-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros", "sync"] }

[lints.rust]
unsafe_code = "forbid" # Forbid unsafe code

[lints.clippy]
enum_glob_use = "deny" # Deny `use Enum::*`
pedantic = "deny"      # Deny a bunch of stuff
nursery = "deny"       # Deny another bunch of stuff
unwrap_used = "deny"   # Deny `.unwrap()`

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
