[package]
name = "elevator-async"
version = "0.1.0"
edition = "2021"
authors = ["Jose Storopoli <jose@storopoli.io>"]
description = "This is a simple study on how to build an actor-based async parallel elevator system in Rust with tokio."
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }

[lints.rust]
unsafe_code = "forbid" # Forbid unsafe code

[lints.clippy]
enum_glob_use = "deny" # Deny `use Enum::*`
unwrap_used = "deny"   # Deny `.unwrap()`

[profile.release]
opt-level = "z"   # Optimized for size, use 3 for speed
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduced to increase optimizations
panic = "abort"   # Abort on panic
strip = "symbols" # Strip symbols from binary
